--- a/styles/style.css
+++ b/styles/style.css
@@ -210,6 +210,12 @@ nav {
   padding: 5%;
   border-radius: 5px;
 }
+.customer-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 .customer-info h4 {
   color: #0a0826;
   margin: 0;
