--- a/styles/style.css
+++ b/styles/style.css
@@ -178,6 +178,7 @@ nav {
   width: 100%;
   display: flex;
   background-color: #0a0826e5;
+  border-radius: 5px;
 }
 .left-box {
   background-color: #0a0826;
@@ -186,6 +187,7 @@ nav {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  border-radius: 5px 20px 20px 5px;
 }
 .left-box p,
 .left-box h2 {
@@ -312,6 +314,9 @@ footer p {
   .customers {
     grid-template-columns: repeat(1, 1fr);
   }
+  .left-box {
+    border-radius: 5px 5px 20px 20px;
+  }
 }
 
 /*For Tab*/
@@ -328,5 +333,8 @@ footer p {
   }
   .customers {
     grid-template-columns: repeat(2, 1fr);
+  }
+  .left-box {
+    border-radius: 5px 5px 20px 20px;
   }
 }
